assets/sass/fractal6.scss
/* ... */
#helperBar {
    background-color: var(--header-background-color) !important;
    margin-top: 0;
    padding-top: 2rem;

    .breadcrumb {
        font-size: 1.15rem;
        a {
            padding-right:0.4rem;
            padding-left:0.4rem;
        }
    }

    nav.level {
        .navbar-menu {
            background-color: inherit !important;
        }
    }

    nav.tabs {
        font-size: 0.9rem;
        ul {
            border-bottom-color: var(--border-color-light) !important;
        }
        li.is-active a {
            border-color: var(--border-color-light);
        }
    }

    @include touch {
        nav.tabs {
            padding-right: 0.75rem;
            padding-left: 0.75rem;
        }
    }

    .level-left {
        // level-right is hidden
        max-width: 100%;
        @include desktop {
            // prevent user roles overflow
            max-width: 75%;
        }
    }

    .tag.is-h:hover {
        background-color: var(--background-evidence);
    }
}

#mainPane {
    // Prevent NavbarTop overflow
    & > .columns {
        margin: 0;
    }
}

.top-section {
    margin: 3rem 0 0;
    padding: 0 10px 0;

    // Prevent NavbarTop overflow
    & > .columns, &.columns {
        margin-left: 0;
        margin-right: 0;
        & > .column {
            padding-left: 0;
            padding-right: 0;
        }
    }
}

.dub-top-section {
    margin-left: -10px;
    padding-left: 10px;
    margin-right: -10px;
    padding-right: 10px;
}

#welcome {
    @include desktop {
        margin-top: 5rem;
    }
    @include mobile {
        .hero-body {
            padding-left: 5px;
            padding-right: 5px;
            .title {
                font-size: 2rem;
            }
            .content {
                font-size: 100% !important;
            }
        }
    }

    .custom-b-1 {
        padding-bottom: 2rem;
        @include fullhd {
            padding-bottom: 4.5rem;
        }
    }

    // Sections
    scroll-behavior: smooth;

    // Padding bewteen fullheight screen (100vh)
    #welcome-2 > div > div {
        padding-top: 4rem;
        padding-bottom: 4rem;
        @include desktop {
            & figure:first-child {
                margin-top: 4rem;
            }
        }
    }
    // remove margin above the footer
    & > div:last-child {
        margin-bottom: calc(-#{$navbar-height} - 0.5rem ) !important; // why - 0.5 ? mystery
    }

    .top-title {
        font-size: 4.5rem !important;
        font-weight: 800 !important;
        margin-bottom: 3rem !important;
        line-height: 1.1 !important;
        @include touch {
            font-size: 3rem !important;
        }
        @include mobile {
            font-size: 2.4rem !important;
        }
    }
    .card h2 {
        font-size: 1.6rem !important;
        @include mobile {
            font-size: 1.3rem !important;
        }
    }

}

.is-primary-2 {
    background-color: darken($primary, 10);
}

.is-info-2 {
    background-color: darken($info, 40);
}

.is-invisible-force {
    visibility: hidden !important;
    height: 0 !important;
    width: 0 !important;
    margin: 0 !important;
    padding: 0 !important;
}

#loginForm, #signupForm {
    @include desktop {
        min-width: 400px;
    }
    @include mobile {
       margin-top: 10px;
    }
}

#createOrga {
    h1.title {
        margin-bottom: 3rem !important;
    }
}

.nodesList {
    hr {
        margin-top: 0.5rem !important;
    }
    #icons {
        margin-bottom: 0.5rem !important;
    }
}


//
// Fixed Pos Menu
//

#orga-menu {
  z-index: 11;
  //position: sticky;
  position: fixed;
  height: 100%;
  width: $orga-menu-width;
  top: calc(#{$navbar-height});
  left: 0;
  transition: width .2s ease;
  background-color: var(--orga-menu-background-color);
  box-shadow: inset -1px 0 0 var(--border-color-light);

  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: none; /* for Firefox */
  &::-webkit-scrollbar {
      display: none; /* for Chrome, Safari, and Opera */
  }

  // Copy from mattermost ?
  display: flex;
  justify-content: space-around;
  //align-items: center;
  //flex: 1 1 auto;


  &.off {
      width: 0 !important;
  }
}

.orgaMenu {
    margin-top: $size-small !important;
    margin-left: 5px;
    margin-right: 5px;
    padding-left: 5px;
    padding-right: 5px;
    border-left: solid 3px var(--header-background-color);
    transition: top,height .2s ease;

    &:hover {
        border-left: solid 3px white;
    }

    &.is-active {
        border-left: solid 3px var(--link);
    }

    & > .here {
        //display: flex;
        position: fixed !important;
        margin-left: 3.5rem !important;
        padding: 10px !important;
        z-index: 100;
    }
}

#tree-menu {
  z-index: 10;
  position: fixed;
  height: 100%;
  width: $tree-menu-width;
  top: calc(#{$navbar-height});
  left: 0;
  transition: width .2s ease;
  background-color: var(--tree-menu-background-color);
  box-shadow: inset -1px 0 0 var(--border-color-light);

  overflow-x: hidden;
  overflow-y: auto;
  scrollbar-width: none; /* for Firefox */
  &::-webkit-scrollbar {
      display: none; /* for Chrome, Safari, and Opera */
  }

  &.off {
      width: 0 !important;
  }

  padding-top: 25px;
  // First level child
  & .menu > .menu-list > li > ul,
  & .menu > .menu-list > ul {
      margin-left: 0.5em;
      border-left: none;
  }
  & .menu-list {
      font-size: 0.95em;
      border-left: 1px solid var(--bbc);
      & li ul {
          //padding: 0.5em 0 0.5em 0.25em ;
          padding: 0 0 0 0em;
          margin: 0;
          margin-left: 1em;
          a {
              padding-left: 1em !important;
              padding-top: 5px !important;
              padding-bottom: 5px !important;
          }
      }
  }

  .bottom-button {
      width: $tree-menu-width;
      height: 35px;
      position: fixed;
      bottom: 1px;
      background-color: var(--tree-menu-background-color);
  }
}
/* ... */

